--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "tlc-sac",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -18,5 +17,10 @@
   "bugs": {
     "url": "https://github.com/Amelissarc/Tlc-Sac/issues"
   },
-  "homepage": "https://github.com/Amelissarc/Tlc-Sac#readme"
+  "homepage": "https://github.com/Amelissarc/Tlc-Sac#readme",
+  "description": "",
+  "devDependencies": {
+    "node-sass": "^8.0.0",
+    "nodemon": "^2.0.20"
+  }
 }
