--- a/package.json
+++ b/package.json
@@ -18,9 +18,194 @@
     "url": "https://github.com/Amelissarc/Tlc-Sac/issues"
   },
   "homepage": "https://github.com/Amelissarc/Tlc-Sac#readme",
-  "description": "",
   "devDependencies": {
     "node-sass": "^8.0.0",
     "nodemon": "^2.0.20"
-  }
+  },
+  "dependencies": {
+    "anymatch": "^3.1.3",
+    "ansi-styles": "^4.3.0",
+    "abbrev": "^1.1.1",
+    "async-foreach": "^0.1.3",
+    "arrify": "^1.0.1",
+    "balanced-match": "^1.0.2",
+    "binary-extensions": "^2.2.0",
+    "braces": "^3.0.2",
+    "aggregate-error": "^3.1.0",
+    "brace-expansion": "^1.1.11",
+    "aproba": "^2.0.0",
+    "camelcase": "^5.3.1",
+    "camelcase-keys": "^6.2.2",
+    "chalk": "^4.1.2",
+    "chokidar": "^3.5.3",
+    "agent-base": "^6.0.2",
+    "ansi-regex": "^5.0.1",
+    "cacache": "^16.1.3",
+    "chownr": "^2.0.0",
+    "concat-map": "^0.0.1",
+    "cliui": "^8.0.1",
+    "core-util-is": "^1.0.3",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "console-control-strings": "^1.1.0",
+    "color-support": "^1.1.3",
+    "clean-stack": "^2.2.0",
+    "cross-spawn": "^7.0.3",
+    "decamelize-keys": "^1.1.1",
+    "decamelize": "^1.2.0",
+    "agentkeepalive": "^4.2.1",
+    "delegates": "^1.0.0",
+    "error-ex": "^1.3.2",
+    "escape-string-regexp": "^1.0.5",
+    "fill-range": "^7.0.1",
+    "encoding": "^0.1.13",
+    "are-we-there-yet": "^3.0.1",
+    "depd": "^1.1.2",
+    "debug": "^4.3.4",
+    "emoji-regex": "^8.0.0",
+    "find-up": "^4.1.0",
+    "function-bind": "^1.1.1",
+    "fs.realpath": "^1.0.0",
+    "gaze": "^1.1.3",
+    "get-stdin": "^4.0.1",
+    "glob-parent": "^5.1.2",
+    "glob": "^7.2.3",
+    "globule": "^1.3.4",
+    "escalade": "^3.1.1",
+    "err-code": "^2.0.3",
+    "hard-rejection": "^2.1.0",
+    "has": "^1.0.3",
+    "has-flag": "^4.0.0",
+    "hosted-git-info": "^4.1.0",
+    "gauge": "^4.0.4",
+    "env-paths": "^2.2.1",
+    "fs-minipass": "^2.1.0",
+    "ignore-by-default": "^1.0.1",
+    "indent-string": "^4.0.0",
+    "has-unicode": "^2.0.1",
+    "graceful-fs": "^4.2.10",
+    "inflight": "^1.0.6",
+    "get-caller-file": "^2.0.5",
+    "inherits": "^2.0.4",
+    "http-cache-semantics": "^4.1.0",
+    "http-proxy-agent": "^5.0.0",
+    "is-binary-path": "^2.1.0",
+    "is-arrayish": "^0.2.1",
+    "https-proxy-agent": "^5.0.1",
+    "is-core-module": "^2.11.0",
+    "is-extglob": "^2.1.1",
+    "is-glob": "^4.0.3",
+    "is-plain-obj": "^1.1.0",
+    "imurmurhash": "^0.1.4",
+    "iconv-lite": "^0.6.3",
+    "is-number": "^7.0.0",
+    "isarray": "^1.0.0",
+    "ip": "^2.0.0",
+    "humanize-ms": "^1.2.1",
+    "js-tokens": "^4.0.0",
+    "js-base64": "^2.6.4",
+    "kind-of": "^6.0.3",
+    "lines-and-columns": "^1.2.4",
+    "json-parse-even-better-errors": "^2.3.1",
+    "locate-path": "^5.0.0",
+    "lodash": "^4.17.21",
+    "map-obj": "^4.3.0",
+    "meow": "^9.0.0",
+    "min-indent": "^1.0.1",
+    "minimist-options": "^4.1.0",
+    "minimatch": "^3.1.2",
+    "infer-owner": "^1.0.4",
+    "is-fullwidth-code-point": "^3.0.0",
+    "isexe": "^2.0.0",
+    "minipass-collect": "^1.0.2",
+    "minipass-pipeline": "^1.2.4",
+    "ms": "^2.1.2",
+    "make-fetch-happen": "^10.2.1",
+    "is-lambda": "^1.0.1",
+    "lru-cache": "^7.14.1",
+    "minipass": "^3.3.6",
+    "minipass-flush": "^1.0.5",
+    "minipass-fetch": "^2.1.2",
+    "normalize-path": "^3.0.0",
+    "minipass-sized": "^1.0.3",
+    "normalize-package-data": "^3.0.3",
+    "negotiator": "^0.6.3",
+    "once": "^1.4.0",
+    "parse-json": "^5.2.0",
+    "p-limit": "^2.3.0",
+    "p-locate": "^4.1.0",
+    "p-try": "^2.2.0",
+    "mkdirp": "^1.0.4",
+    "minizlib": "^2.1.2",
+    "path-exists": "^4.0.0",
+    "path-is-absolute": "^1.0.1",
+    "process-nextick-args": "^2.0.1",
+    "picomatch": "^2.3.1",
+    "node-gyp": "^8.4.1",
+    "pstree.remy": "^1.1.8",
+    "nan": "^2.17.0",
+    "quick-lru": "^4.0.1",
+    "read-pkg": "^5.2.0",
+    "read-pkg-up": "^7.0.1",
+    "nopt": "^5.0.0",
+    "p-map": "^4.0.0",
+    "npmlog": "^6.0.2",
+    "redent": "^3.0.0",
+    "path-key": "^3.1.1",
+    "readdirp": "^3.6.0",
+    "promise-retry": "^2.0.1",
+    "require-directory": "^2.1.1",
+    "sass-graph": "^4.0.1",
+    "scss-tokenizer": "^0.4.3",
+    "semver": "^7.3.8",
+    "promise-inflight": "^1.0.1",
+    "readable-stream": "^3.6.0",
+    "path-parse": "^1.0.7",
+    "retry": "^0.12.0",
+    "simple-update-notifier": "^1.1.0",
+    "shebang-command": "^2.0.0",
+    "safer-buffer": "^2.1.2",
+    "set-blocking": "^2.0.0",
+    "signal-exit": "^3.0.7",
+    "source-map": "^0.7.4",
+    "resolve": "^1.22.1",
+    "shebang-regex": "^3.0.0",
+    "spdx-correct": "^3.1.1",
+    "spdx-expression-parse": "^3.0.1",
+    "spdx-exceptions": "^2.3.0",
+    "stdout-stream": "^1.4.1",
+    "rimraf": "^3.0.2",
+    "spdx-license-ids": "^3.0.12",
+    "safe-buffer": "^5.2.1",
+    "socks": "^2.7.1",
+    "strip-indent": "^3.0.0",
+    "socks-proxy-agent": "^7.0.0",
+    "supports-color": "^7.2.0",
+    "to-regex-range": "^5.0.1",
+    "trim-newlines": "^3.0.1",
+    "smart-buffer": "^4.2.0",
+    "string-width": "^4.2.3",
+    "strip-ansi": "^6.0.1",
+    "string_decoder": "^1.3.0",
+    "true-case-path": "^2.2.1",
+    "undefsafe": "^2.0.5",
+    "util-deprecate": "^1.0.2",
+    "validate-npm-package-license": "^3.0.4",
+    "touch": "^3.1.0",
+    "supports-preserve-symlinks-flag": "^1.0.0",
+    "type-fest": "^0.18.1",
+    "ssri": "^9.0.1",
+    "unique-filename": "^2.0.1",
+    "wrappy": "^1.0.2",
+    "yargs-parser": "^20.2.9",
+    "yallist": "^4.0.0",
+    "unique-slug": "^3.0.0",
+    "which": "^2.0.2",
+    "wide-align": "^1.1.5",
+    "tar": "^6.1.13",
+    "wrap-ansi": "^7.0.0",
+    "y18n": "^5.0.8",
+    "yargs": "^17.6.2"
+  },
+  "description": ""
 }
